// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar component renders a progress bar using default props 1`] = `
.sx9jlbw {
  border-radius: var(--radii-round);
  height: 12px;
  position: relative;
  overflow: hidden;
  width: 100%;
}

.sx9jlbw4bknw--c2 {
  border: 1px solid var(--colors-tonal400);
  background: white;
  color: var(--colors-primary500);
}

.sxypqsd {
  box-sizing: border-box;
  position: absolute;
  background-color: currentcolor;
  height: 100%;
}

<div>
  <div
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    class="sx9jlbw sx9jlbw03kze--appearance-outline sx9jlbw03kze--theme-primary sx9jlbw4bknw--c2"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="sxypqsd"
      data-max="100"
      data-state="indeterminate"
      style="width: 50%;"
    />
  </div>
</div>
`;

exports[`ProgressBar component renders a solid progress bar 1`] = `
.sx9jlbw {
  border-radius: var(--radii-round);
  height: 12px;
  position: relative;
  overflow: hidden;
  width: 100%;
}

.sx9jlbw4bknw--c2 {
  border: 1px solid var(--colors-tonal400);
  background: white;
  color: var(--colors-primary500);
}

.sx9jlbw4qfa7--c2 {
  border: 1px solid var(--colors-tonal400);
  background: white;
  color: var(--colors-secondary500);
}

.sx9jlbwmrg77--c2 {
  background: var(--colors-tonal300);
  color: var(--colors-primary500);
}

.sxypqsd {
  box-sizing: border-box;
  position: absolute;
  background-color: currentcolor;
  height: 100%;
}

<div>
  <div
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    class="sx9jlbw sx9jlbw03kze--appearance-solid sx9jlbw03kze--theme-primary sx9jlbwmrg77--c2"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="sxypqsd"
      data-max="100"
      data-state="indeterminate"
      style="width: 50%;"
    />
  </div>
</div>
`;
